FullQa New/src/objects/Excise_Division_Amendment__c.object
<CustomObject>
    <description>Used to track Excise business unit specific amendments to contracts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Excise Division Amendments</relationshipLabel>
        <relationshipName>Excise_Division_Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amendment_Notes__c</fullName>
        <label>Amendment Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Signature_Date__c</fullName>
        <label>Amendment Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excise_Division_Contract__c</fullName>
        <label>Excise Division Contract</label>
        <referenceTo>Excise_Division_Contract__c</referenceTo>
        <relationshipLabel>Contract Amendments</relationshipLabel>
        <relationshipName>Excise_Division_Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Contract__c</fullName>
        <label>Link to Contract</label>
        <type>Url</type>
    </fields>
    <label>Excise Division Amendment</label>
    <nameField>
        <label>Excise Division Amendment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excise Division Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>